Darn, this one was quite hard to figure out but we have the modular test task configuration working too, yay.